--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
 <header class="masthead">
   <div class="container">
     <div class="branding">
-      <a href="//www.texastribune.org/"><img class="trib-logo" alt="The Texas Tribune" src="/images/tt-logo-white.png"></a>
+      <a href="//www.texastribune.org/"><img class="trib-logo" alt="The Texas Tribune" src="//s3.amazonaws.com/apps.texastribune.org/branding/TxTrib-logo-white500x55.svg"></a>
     </div>
   </div>
 </header>
