--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,6 +64,7 @@
 </script>
 
 <!-- build:js({app,.tmp}) scripts/main.js -->
+<script src="scripts/jquery.fitvids.js"></script>
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
 
