--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'neat/app/assets/stylesheets/neat';
 @import 'newsapps-styles/initialize';
 
+@import 'custom/ads';
 @import 'custom/custom';
 @import 'custom/navlinks';
 @import 'custom/video-container';
