--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
+  {% include 'app/templates/includes/ads.html' %}
 </head>
 <body>
 
@@ -28,25 +29,41 @@
 
 {% block content %}{% endblock %}
 
-<footer class="tribune-footer">
-<div class="container">
-  <nav class="first-nav">
-    <ul>
-      <li>&copy; 2014 <a href="http://www.texastribune.org/">The Texas Tribune</a></li>
-    </ul>
-  </nav>
-  <nav class="last-nav">
-    <ul>
+{% include 'app/templates/includes/banner_ad.html' %}
+<footer class="footer">
+  <div class="footer-container">
+    <div>
+      <a href="https://twitter.com/newsapps"><img class="logo" src="//s3.amazonaws.com/apps.texastribune.org/branding/TxTrib-NewsApps-yellow.svg" alt="Texas Tribune News Apps logo, links to News Apps' Twitter account"></a>
+    </div>
+    <div>
+      <ul>
+        <li><a href="http://www.facebook.com/texastribune"><i class="icon fa-facebook-square"></i>Facebook</a></li>
+        <li><a href="http://twitter.com/TexasTribune"><i class="icon fa-twitter-square"></i>Twitter</a></li>
+        <li><a href="http://www.youtube.com/user/thetexastribune"><i class="icon fa-youtube-play"></i>YouTube</a></li>
+        <li><a href="http://instagram.com/texas_tribune"><i class="icon fa-instagram"></i>Instagram</a></li>
+        <li><a href="http://www.linkedin.com/company/texas-tribune"><i class="icon fa-linkedin-square"></i>LinkedIn</a></li>
+      </ul>
+    </div>
+    <div class="internal-links">
+      <ul>
       <li><a href="http://www.texastribune.org/about/">About Us</a></li>
-      <li><a href="http://www.texastribune.org/contact/">Contact Us</a></li>
       <li><a href="http://www.texastribune.org/support-us/donors-and-members/">Who Funds Us?</a></li>
       <li><a href="http://www.texastribune.org/terms-of-service/">Terms of Service</a></li>
       <li><a href="http://www.texastribune.org/ethics/">Code of Ethics</a></li>
       <li><a href="http://www.texastribune.org/privacy/">Privacy Policy</a></li>
-      <li class="donor-item"><a href="https://www.texastribune.org/join/">Donate</a></li>
+      <li><a href="http://www.texastribune.org/corrections/">Corrections</a></li>
+      <li><a href="https://www.texastribune.org/join/" class="donate-link">Donate</a></li>
     </ul>
-  </nav>
-</div>
+    </div>
+    <div class="donate">
+      <ul>
+        <li>Nonpartisan.</li>
+        <li>Nonprofit.</li>
+        <li>Statewide.</li>
+        <a href="https://www.texastribune.org/join/"><li>Join Us</li></a>
+      </ul>
+    </div>
+  </div>
 </footer>
 
 
