make headers bold, move ad, add meta to base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,24 @@
   <title>{{ data.META.Series_Title }} | The Texas Tribune</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!--   Open Graph -->
+  <meta property="og:site_name" content="The Texas Tribune">
+  <meta property="og:description" content="Community Concerns Come to the Capitol">
+  <meta property="og:title" content="State of Mind | The Texas Tribune">
+  <meta property="og:url" content="//s3.amazonaws.com/apps.texastribune.org/state-of-mind/">
+  <meta property="og:redirect_uri" content="//s3.amazonaws.com/apps.texastribune.org/state-of-mind">
+  <meta property="og:image" content="">
+
+  <!-- Twitter settings -->
+  <meta name="twitter:card" value="summary_large_image">
+  <meta name="twitter:site" value="@TexasTribune">
+  <meta name="twitter:creator" content="@newsapps">
+  <meta name="twitter:title" content="State of Mind | The Texas Tribune">
+  <meta name="twitter:description" content="{{ x.twitter_text }}">
+  <meta name="twitter:url" content="//s3.amazonaws.com/apps.texastribune.org/state-of-mind/">
+  <meta name="twitter:image" content="">
+
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
