--- a/app/styles/custom/_video-container.scss
+++ b/app/styles/custom/_video-container.scss
@@ -10,7 +10,7 @@
   padding-bottom: 1.4em;
 
   h1 {
-    font-weight: 400;
+    // font-weight: 400;
     border-bottom: 1px solid $tribune-yellow;
 
     .date {
