edit styles, add images, favicon, update google analytics code

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
   <title>{{ data.META.Series_Title }} | The Texas Tribune</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="shortcut icon" type="image/x-icon" href="//s3.amazonaws.com/static.texastribune.org/common/images/favicon.ico">
   <!--   Open Graph -->
   <meta property="og:site_name" content="The Texas Tribune">
   <meta property="og:description" content="Community Concerns Come to the Capitol">
@@ -96,7 +96,7 @@
   i=o.createElement(r);s=o.getElementsByTagName(r)[0];
   i.src='//www.google-analytics.com/analytics.js';
   s.parentNode.insertBefore(i,s)}(window,document,'script','ga'));
-  ga('create','UA-9827490-7');ga('send','pageview');
+  ga('create','UA-9827490-1');ga('send','pageview');
 </script>
 
 <!-- build:js({app,.tmp}) scripts/main.js -->
