--- a/app/styles/custom/_video-container.scss
+++ b/app/styles/custom/_video-container.scss
@@ -22,6 +22,14 @@
       margin-top: .5em;
     }
 
+    a {
+      color: $bodytext-black;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+
   }
 
 }
