--- a/app/templates/macro.html
+++ b/app/templates/macro.html
@@ -76,23 +76,17 @@
     </header>
     <div class="video">
       <iframe width="560" height="315" src="//www.youtube.com/embed/{{ x.YOUTUBE_ID }}" frameborder="0" allowfullscreen></iframe>
-<!--     {% if loop.first %}
-      {% include 'app/templates/includes/ad1.html' %}
-    {% elif loop.index0 == 2 %}
-      {% include 'app/templates/includes/ad2.html' %}
-    {% elif loop.index0 == 4 %}
-      {% include 'app/templates/includes/ad3.html' %}
-    {% elif loop.index0 == 6 %}
-      {% include 'app/templates/includes/ad4.html' %}
-    {% else %}
-    {% endif %} -->
     </div>
     <div class="map">
       <img class="mobile" src="images/TT-SOM-map-{{ x.MAP_IMG }}-mobile.png">
       <img class="desktop" src="images/TT-SOM-map-{{ x.MAP_IMG }}-desktop.png">
     </div>
     <div class="context">
+      {% if loop.first %}
       <p><span class="dateline">{{ x.LOCATION }} &mdash; </span>{{ x.SHORT_DESC }}</p>
+      {% else %}
+      <p><span class="dateline">{{ x.LOCATION }}, TX &mdash; </span>{{ x.SHORT_DESC }}</p>
+      {% endif %}
     </div>
   </div>
     {% if loop.first %}
@@ -104,9 +98,9 @@
     {% elif loop.index0 == 4 %}
       {% include 'app/templates/includes/ad3.html' %}
       {% include 'app/templates/includes/ad3_mobile.html' %}
-    {% elif loop.index0 == 6 %}
+<!--     {% elif loop.index0 == 5 %}
       {% include 'app/templates/includes/ad4.html' %}
-      {% include 'app/templates/includes/ad4_mobile.html' %}
+      {% include 'app/templates/includes/ad4_mobile.html' %} -->
     {% else %}
     {% endif %}
   {% endfor %}
