--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{ data.META.Series_Title }} | The Texas Tribune</title>
+  <title>{{ META[0]["Series"] }} | The Texas Tribune</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="//s3.amazonaws.com/static.texastribune.org/common/images/favicon.ico">
-  <!--   Open Graph -->
+<!--   Open Graph -->
   <meta property="og:site_name" content="The Texas Tribune">
-  <meta property="og:description" content="Community Concerns Come to the Capitol">
-  <meta property="og:title" content="State of Mind | The Texas Tribune">
-  <meta property="og:url" content="//s3.amazonaws.com/apps.texastribune.org/state-of-mind/">
+  <meta property="og:description" content="{{ META[0]["facebook_text"] }}">
+  <meta property="og:title" content="{{ META[0]["Series"] }}">
+  <meta property="og:url" content="http://apps.texastribune.org/state-of-mind/">
   <meta property="og:redirect_uri" content="//s3.amazonaws.com/apps.texastribune.org/state-of-mind">
-  <meta property="og:image" content="">
+  <meta property="og:image" content="images/TT-state-of-mind-landing-pointer002.jpg">
 
-  <!-- Twitter settings -->
+<!-- Twitter settings -->
   <meta name="twitter:card" value="summary_large_image">
   <meta name="twitter:site" value="@TexasTribune">
   <meta name="twitter:creator" content="@newsapps">
-  <meta name="twitter:title" content="State of Mind | The Texas Tribune">
-  <meta name="twitter:description" content="{{ x.twitter_text }}">
+  <meta name="twitter:title" content="{{ META[0]["Series"] }}">
+  <meta name="twitter:description" content="{{ META[0]["twitter_text"] }}">
   <meta name="twitter:url" content="//s3.amazonaws.com/apps.texastribune.org/state-of-mind/">
-  <meta name="twitter:image" content="">
+  <meta name="twitter:image" content="images/TT-state-of-mind-landing-pointer002.jpg">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css styles/vendor.css -->
